@@ -35,3 +35,5 @@ void on_exit_application(GtkWidget *widget, gpointer user_data);
 void on_open_from_file(GtkWidget *widget, gpointer user_data);
 void on_open_from_template(GtkWidget *widget, gpointer user_data);
 void on_open_template_close(GtkWidget *widget, gpointer user_data);
+void on_movie_info(GtkWidget *widget, gpointer user_data);
+void on_movie_info_close(GtkWidget *widget, gpointer user_data);
