@@ -81,3 +81,10 @@ Wed Dec 29 14:23:22 PST 1999
 (Mandrake)
 
 added open using template dialog
+
+---------------------------------------------------------------------------
+
+Wed Dec 29 15:10:39 PST 1999
+(Mandrake)
+
+added movie info screen.
